--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.0",
+    "bootstrap-toggle": "^2.2.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.15.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "reactstrap": "^8.10.0",
+    "web-vitals": "^1.1.2",
+    "webpack": "4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
