--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.2",
+    "react-iframe": "^1.8.0",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-tooltip": "^4.2.21",
-    "reactstrap": "^8.10.0",
+    "reactstrap": "^8.10.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "webpack": "4.44.2"
